manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello
  namespace: nginx-hello
spec:
  selector:
    app: nginx-hello
  ports:
    - name: http
      port: 80
      targetPort: 80
