manifests/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-hello
  namespace: nginx-hello
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nginx-hello.local`)
      kind: Rule
      services:
        - name: nginx-hello
          port: 80
